--- a/app/src/main/res/layout/fragment_produk.xml
+++ b/app/src/main/res/layout/fragment_produk.xml
@@ -29,6 +29,7 @@
                 android:hapticFeedbackEnabled="false"
                 android:text="Tambah"
                 android:textColor="#FFFFFF"
+                app:backgroundTint="@android:color/holo_orange_dark"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -57,7 +58,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/txtTotalProduk"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
