--- a/app/src/main/res/navigation/bottom_nav.xml
+++ b/app/src/main/res/navigation/bottom_nav.xml
@@ -24,4 +24,30 @@
         android:name="com.developer.pcsapi.AboutFragment"
         android:label="fragment_about"
         tools:layout="@layout/fragment_about" />
+    <fragment
+        android:id="@+id/produkFormFragment"
+        android:name="com.developer.pcsapi.ProdukFormFragment"
+        android:label="fragment_produk_form"
+        tools:layout="@layout/fragment_produk_form" >
+        <argument
+            android:name="argProduk"
+            app:argType="com.developer.pcsapi.response.produk.Produk"
+            app:nullable="true" />
+        <argument
+            android:name="argStatus"
+            app:argType="string"
+            app:nullable="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/bayarFragment"
+        android:name="com.developer.pcsapi.BayarFragment"
+        android:label="fragment_bayar"
+        tools:layout="@layout/fragment_bayar" >
+        <argument
+            android:name="argsCart"
+            app:argType="com.developer.pcsapi.response.cart.Cart" />
+        <argument
+            android:name="argsTotal"
+            app:argType="string" />
+    </fragment>
 </navigation>
